api/alberts-brain-kubernetes/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amixtra-brain-ingress-https
  namespace: amixtra
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: amixtra-brain-ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/target-node-labels: amixtra/type=api
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-northeast-2:961341529948:regional/webacl/amixtra-waf-acl/571bedc3-2f9c-4dd7-86b7-ab00d3649925
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:961341529948:certificate/b51a166c-4a1b-40b2-aee6-382af22e5b75
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: "/api/*"
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
      - path: "/api/*"
        pathType: Prefix
        backend:
          service:
            name: amixtra-brain-service
            port:
              number: 80
